content/boomerang-flow/3.3.1/getting-to-know/06.parameters.md
---
title: Parameters
index: 6
---

# Parameters

Parameters are an important aspect of Boomerang Flow, allowing for a powerful inheritance model, and can be set and represent the many different parts of the application. They are available throughout a workflow or task and are substituted at execution time.

## Parameter Syntax

You can reference parameters in a task using the `$()` syntax.

There are a number of caveats with parameters.

- Must only contain alphanumeric characters, hyphens (-), and underscores (\_).
- Must begin with a letter or an underscore (\_).

## Parameter Availability

The following table lists the parameters and when they are available to be substituted in an execution. Additionally, parameters have an inheritance order based on the layering order indicated below. For example, defining a parameter with the same name at the Team and Workflow level will lead the Workflow parameter to override and replace the value for the Team parameter, unless referenced directly using scope.

The substitution is performed by the Workflow service when a workflow is executed.

![Parameter Layering](./assets/img/Boomerang-Flow-Parameters.png)

| Parameter Scope | Available When?                                                                                                          | Syntax                                    | Example                                          |
| --------------- | ------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------- | ------------------------------------------------ |
| Global          | Throughout the workflow lifecycle. These are defined in Boomerang Flow by Administrators.                                | `$(global.params.<parameter>)`            | `$(global.params.slackChannel)`                  |
| Team            | Throughout the workflow lifecycle. These are defined in Boomerang Flow by teams.                                         | `$(team.params.<parameter>)`              | `$(team.params.slackChannel)`                    |
| Workflow        | Throughout the workflow lifecycle. Created and set by a user through Editor inputs.                                      | `$(workflow.params.<parameter>)`          | `$(workflow.params.slackChannel)`                |
| System          | Specific reserved parameters available at the execution of a workflow.                                                   | `$(system.params.<parameter>)`            | `$(system.params.workflow-activity-id)`          |
| Params          | The flattened parameters with all inheritance and substitution resolved.                                                 | `$(params.<parameter>)`                   | `$(params.slackChannel)`                         |
| Task Results    | At completion of a task execution, these parameters can be referenced by other tasks during the same workflow execution. | `$(task.<task name>.results.<parameter>)` | `$(task.My Wait For Event.results.eventPayload)` |

Although tasks themselves have input parameters, these are defined as part of the task template and are only able to be referenced within the task template or by the task code itself.

## System Parameters

The following are the reserved parameters provided by Boomerang Flow.

| Parameter                   | Syntax                                                                                    | Description                                                                                                                                                                                  |
| --------------------------- | ----------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| task-name                   | `$(system.params.task-name)`<br>`$(params.task-name)`                                     | This is the user-specified name of the executing task. It is unique to a workflow.                                                                                                           |
| task-id                     | `$(system.params.task-id)`<br>`$(params.task-id)`                                         | This is the unique identifier for the established task in this particular workflow.                                                                                                          |
| task-type                   | `$(system.params.task-type)`<br>`$(params.task-type)`                                     | This is the categorization of a particular task. Options are `template`, `decision`, `customtask`, `approval`, `setwfproperty`, `manual`, `eventwait`, `acquirelock`, and `releaselock`.     |
| workflow-id                 | `$(system.params.workflow-id)`<br>`$(params.workflow-id)`                                 | This is the unique identifier for this workflow.                                                                                                                                             |
| workflow-name               | `$(system.params.workflow-name)`<br>`$(params.workflow-name)`                             | This is the user-specified name for the workflow.                                                                                                                                            |
| workflow-version            | `$(system.params.workflow-version)`<br>`$(params.workflow-version)`                       | This is the revision or version of the workflow currently being executed.                                                                                                                    |
| workflow-activity-id        | `$(system.params.workflow-activity-id)`<br>`$(params.workflow-activity-id)`               | This is the unique identifier for the particular execution of the workflow.                                                                                                                  |
| workflow-activity-initiator | `$(system.params.workflow-activity-initiator)`<br>`$(params.workflow-activity-initiator)` | This is the user ID of the initiator of this activity.                                                                                                                                       |
| trigger-type                | `$(system.params.trigger-type)`<br>`$(params.trigger-type)`                               | This is the trigger that created this workflow activity or execution.                                                                                                                        |
| trigger-webhook-url         | `$(system.params.trigger-webhook-url)`<br>`$(params.trigger-webhook-url)`                 | This is the URL including domain name and context for the webhook endpoint. It is useful if you programmatically want to provide a callback URL from an endpoint triggered by your workflow. |
| trigger-wfe-url             | `$(system.params.trigger-wfe-url)`<br>`$(params.trigger-wfe-url)`                         | This is the URL, including domain name and context, for the wait for event endpoint.                                                                                                         |
| trigger-event-url           | `$(system.params.trigger-event-url)`<br>`$(params.trigger-event-url)`                     | This is the URL, including domain name and context, for the event endpoint.                                                                                                                  |

### System Token Parameters

A subset of System parameters are tokens, which allow you to dynamically reference a token programmatically in your workflow. This can be useful if you are sending a wait for event endpoint in an email body and need to dynamically provide the token that will be used to authenticate.

| Parameter      | Syntax                          | Description                                                                            |
| -------------- | ------------------------------- | -------------------------------------------------------------------------------------- |
| `<tokenlabel>` | `$(system.tokens.<tokenlabel>)` | The specific token using the token label (set at creation time) to retrieve the token. |

## Result Parameters

All tasks can have result parameters, which as mentioned above, can be used by other tasks in the workflow. They are also available at the completion of a workflow using the execution status API.

### Standard Tasks

Some standard tasks will output result parameters.

### Custom Tasks

See [Custom task architecture](/useboomerang.io/docs/architecture/overview) for more information.

As this task is a bring-your-own container, we have provided two mechanisms for setting result parameters.

| Property Type        | Location            | Description                                                                                                                                                            |
| -------------------- | ------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Environment Variable | `/lifecycle/env`    | Any key value pair in the format of an environment variable can be placed in this file. At the termination of the worker, these will be turned into result parameters. |
| Files                | `/lifecycle/<file>` | Any file in the `/lifecycle` directory at termination of the worker will be turned into a base64-encoded parameter. The key will be the filename.                      |

## Comparison to Tekton Parameters

Boomerang Flow parameters are very similar to what you will find in Tekton<sup>®</sup> parameters and will be familiar to some of our users.

| Tekton | Example | Boomerang Flow | Example                                                     |
| ------ | ------- | -------------- | ----------------------------------------------------------- |
| -      | -       | Global         | `$(global.params.<parameter>)` or `$(params.<parameter>)`   |
| -      | -       | Team           | `$(global.params.<parameter>)` or `$(params.<parameter>)`   |
| -      | -       | Pipeline       | `$(params.<param name>)`                                    |
| -      | -       | Workflow       | `$(workflow.params.<parameter>)` or `$(params.<parameter>)` |
| -      | -       | Context        | `$(context.pipeline.name)`                                  | System | `$(system.params.workflow-name)` or `$(params.<parameter>)` |
| -      | -       | Task           | `$(params.<param name>)`                                    | Task | `$(params.<param name>)` |

Reference:

- [Using variable substitution](https://github.com/tektoncd/pipeline/blob/master/docs/tasks.md#using-variable-substitution)
- [Variable Substitutions Supported by Tasks and Pipelines](https://github.com/tektoncd/pipeline/blob/master/docs/variables.md)
